--- a/galeriaImagens/index.html
+++ b/galeriaImagens/index.html
@@ -9,9 +9,9 @@
 <body>
 
 <div class="gallery">
-    <div><img src="imagem1.jpg" alt="Imagem 1"></div>
-    <div><img src="imagem2.jpg" alt="Imagem 2"></div>
-    <div><img src="imagem3.jpg" alt="Imagem 3"></div>
+    <div><img src="fotoKaliu.jpg"></div>
+    <div><img src="fotoKaliu.jpg"></div>
+    <div><img src="fotoKaliu.jpg"></div>
 </div>
 
 </body>
