--- a/galeriaImagens/index.html
+++ b/galeriaImagens/index.html
@@ -9,9 +9,9 @@
 <body>
 
 <div class="gallery">
-    <div><img src="fotoKaliu.jpg"></div>
-    <div><img src="fotoKaliu.jpg"></div>
-    <div><img src="fotoKaliu.jpg"></div>
+    <div><img src="../fotoKaliu.jpg"></div>
+    <div><img src="../fotoKaliu.jpg"></div>
+    <div><img src="../fotoKaliu.jpg"></div>
 </div>
 
 </body>
